using boxed toList conveniece method instead of Collector